# ideas_app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
ideas_app/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
ideas_app/ideas/: apps.py  models.py  queries.py  root.py  schema.py  test_ideas.py  types.py
ideas_app/ideas/migrations/: 0001_initial.py  0002_idea_title_idea_visibility_alter_idea_text.py  0003_idea_pub_date.py
ideas_app/users/: apps.py  models.py  root.py  schema.py  types.py
ideas_app/users/migrations/: 0001_initial.py  0003_account.py  0004_delete_account.py  0005_userconnection.py
users/: models.py  schema.py  types.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_customuser_username.py
